# color_sentence

./: CONVENTIONS.md  README.md  pyproject.toml  pyrightconfig.json
src/color_sentence/: __init__.py
src/color_sentence/config/: audio_config.py  color_naming_config.py  config.py  gui_config.py  overrides_config.py  types.py
src/color_sentence/core/: color_math.py  engine.py  normalization.py  overrides.py
src/color_sentence/net/: color_api.py
src/color_sentence/tts/: tts_gtts.py  tts_runner.py  utterances.py
src/color_sentence/ui/: cli.py  gui_pyside.py
tests/: conftest.py  test_engine.py
