[project]
name = "color_sentence"
version = "0.1.0"
description = "Text→Farbe: Farbwörter, Suffixe, Satzzeichen; GUI mit PySide6; TTS optional."
authors = [{ name = "dcAzrael" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "PySide6>=6.7",
    "gTTS>=2.5",
    "httpx>=0.27",
]


# optionale Extras
[project.optional-dependencies]
dev = ["ruff>=0.5", "mypy>=1.10", "pyright>=1.1"]


[tool.uv]


[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"



[tool.ruff]
line-length = 120
# Enable useful rule sets; keep it strict but practical.
select = ["E", "F", "I", "ANN", "S", "B", "PL", "SIM"]
ignore = [
    # allow docstrings without param/return sections in tiny helpers
    "D1",
]
# Plugins:
# - ANN: flake8-annotations (functions must be typed)

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
